--- a/src/app/planning/planning-host/planning-host.component.html
+++ b/src/app/planning/planning-host/planning-host.component.html
@@ -1,23 +1,23 @@
-<mat-card class="product-card">
-    <mat-card-header>
-        <mat-card-title>Host a Sprint Planning Poker Session</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <mat-form-field appearance="outline">
-            <mat-label>Session name</mat-label>
-            <input matInput placeholder="Enter the name of the session">
-        </mat-form-field>
+<div *ngIf="!sessionStarted">
+  <ng-container *ngTemplateOutlet="setup"></ng-container>
+</div>
+<div *ngIf="sessionStarted">
+  <ng-container *ngTemplateOutlet="landing"></ng-container>
+</div>
 
-        <mat-selection-list #list [(ngModel)]="selectedAvailableCards" (ngModelChange)="onNgModelChange($event)">
-            <mat-list-option *ngFor="let availableCard of availableCards" [value]="availableCard">
-                {{cardName(availableCard)}}
-            </mat-list-option>
-        </mat-selection-list>
-    </mat-card-content>
-    <mat-card-actions>
-        <mat-list role="navigation">
-            <mat-list-item><button mat-raised-button disabled class="purple-button">Start session</button>
-            </mat-list-item>
-        </mat-list>
-    </mat-card-actions>
-</mat-card>
+<ng-template #setup>
+  <app-planning-host-setup
+    [(sessionName)]="sessionName"
+    [(userName)]="userName"
+    [(selectedAvailableCards)]="selectedAvailableCards"
+    (startSessionTapped)="didTapStartSession()"
+  ></app-planning-host-setup>
+</ng-template>
+
+<ng-template #landing>
+  <app-planning-host-landing
+    [sessionName]="sessionName"
+    [userName]="userName"
+    [availableCards]="availableCards"
+  ></app-planning-host-landing>
+</ng-template>
