--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,8 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .product-card {
-    max-width: 600px;
-    margin: 20px;
+    max-width: 800px;
+    margin: 20px auto;
     background-color: #E5E5EA;
     -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
