Remove ngIf on landing component

--- a/src/app/planning/planning-host-landing/planning-host-landing.component.html
+++ b/src/app/planning/planning-host-landing/planning-host-landing.component.html
@@ -1,4 +1,4 @@
-<mat-card class="product-card" *ngIf="">
+<mat-card class="product-card">
   <mat-card-header>
     <mat-card-title>{{sessionName}}</mat-card-title>
     <mat-card-subtitle>To start voting on tickets, you need to add a ticket first</mat-card-subtitle>
