--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #E5E5EA;
     width: 100%;
 }
+
+.purple-button-command {
+    background-color: #A288E3;
+    color: #E5E5EA;
+}
