--- a/src/app/planning/planning-host-setup/planning-host-setup.component.html
+++ b/src/app/planning/planning-host-setup/planning-host-setup.component.html
@@ -1,19 +1,12 @@
 <mat-card class="product-card">
-  <mat-card-header>
+  <mat-card-content>
     <mat-card-title>Host a Sprint Planning Poker Session</mat-card-title>
     <mat-card-subtitle>Provide the details necessary start a new session</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
+
     <form #sessionForm="ngForm">
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="fill">
         <mat-label>Session name</mat-label>
         <input matInput [(ngModel)]="sessionName" name="sessionName" placeholder="Enter the name of the session"
-          required minlength="2" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Your name</mat-label>
-        <input matInput [(ngModel)]="userName" name="userName" placeholder="Enter the name you want others to see"
           required minlength="2" />
       </mat-form-field>
 
