--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 100%;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .product-card .mat-pseudo-checkbox {
     background: #A288E3;
     border-color: #38023B;
@@ -38,4 +42,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .purple-button-command {
     background-color: #A288E3;
     color: #E5E5EA;
+}
+
+mat-card-content h2 {
+    color: #A288E3;
 }
