--- a/src/app/planning/planning-host-landing/planning-host-landing.component.html
+++ b/src/app/planning/planning-host-landing/planning-host-landing.component.html
@@ -73,8 +73,8 @@
     <mat-card-subtitle>Something has gone horribly wrong. Please start a new session.</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button class="purple-button" routerLink="./planning/host">
-      Go back to landing
+    <button mat-raised-button class="purple-button" routerLink="/planning/host">
+      Go back to host landing
     </button>
   </mat-card-actions>
 </mat-card>
@@ -85,7 +85,7 @@
     <mat-card-subtitle>The session has been ended.</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button class="purple-button" routerLink="./">
+    <button mat-raised-button class="purple-button" routerLink="/">
       Go back to landing
     </button>
   </mat-card-actions>
