--- a/src/app/planning/planning-host-landing/planning-host-landing.component.html
+++ b/src/app/planning/planning-host-landing/planning-host-landing.component.html
@@ -97,10 +97,30 @@
   </mat-card-content>
   <mat-card-actions>
     <mat-selection-list #participantsList [multiple]="false">
-      <mat-list-option *ngFor="let participant of participants" [value]="participant.participantId">
+      <mat-list-option [matMenuTriggerFor]="menu" #menuTrigger *ngFor="let participant of participants"
+        [value]="participant.participantId">
         <mat-icon mat-list-icon>account_circle</mat-icon>
         {{participant.name}}
+
+        <mat-icon mat-list-icon *ngIf="isVotingState">
+          {{votingIcon(participant.participantId)}}
+        </mat-icon>
+        <div *ngIf="isFinishedVotingState">
+          {{votingValue(participant.participantId)}}
+        </div>
+        <mat-icon mat-list-icon *ngIf="isFinishedVotingState && votingValue(participant.participantId) == null">
+          shortcut
+        </mat-icon>
       </mat-list-option>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="onClickSkipVote(participantsList.selectedOptions.selected[0].value)"
+          *ngIf="isVotingState">
+          Skip vote
+        </button>
+        <button mat-menu-item (click)="onClickRemoveParticipant(participantsList.selectedOptions.selected[0].value)">
+          Remove participant
+        </button>
+      </mat-menu>
     </mat-selection-list>
   </mat-card-actions>
 </mat-card>
