--- a/src/app/planning/shared/planning-landing-ticket-card-content/planning-landing-ticket-card-content.component.html
+++ b/src/app/planning/shared/planning-landing-ticket-card-content/planning-landing-ticket-card-content.component.html
@@ -4,9 +4,7 @@
   <h2>Session code</h2>
   <mat-card-subtitle>{{sessionCode}}</mat-card-subtitle>
 
-  <h2>Ticket title</h2>
-  <mat-card-subtitle>{{ticketTitle}}</mat-card-subtitle>
-
-  <h2>Ticket description</h2>
-  <mat-card-subtitle>{{ticketDescription}}</mat-card-subtitle>
+  <h2>Ticket</h2>
+  <h3>{{ticketTitle}}</h3>
+  <p>{{ticketDescription}}</p>
 </mat-card-content>
