Fix skipped bug where icon is not shown in finished state

--- a/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
+++ b/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
@@ -8,7 +8,7 @@
     <mat-icon mat-icon-button *ngIf="isVotingState">
       {{votingIcon(participant!.participantId)}}
     </mat-icon>
-    <div mat-icon-button *ngIf="isFinishedVotingState">
+    <div mat-icon-button *ngIf="isFinishedVotingState && votingValue(participant!.participantId) != null">
       {{votingValue(participant!.participantId)}}
     </div>
     <mat-icon mat-icon-button *ngIf="isFinishedVotingState && votingValue(participant!.participantId) == null">
