--- a/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
+++ b/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
@@ -1,3 +1,11 @@
-<p>
-  planning-participant-participants-card works!
-</p>
+<mat-card class="product-card">
+  <mat-card-content>
+    <mat-card-title>Participants</mat-card-title>
+  </mat-card-content>
+  <mat-card-actions>
+    <mat-selection-list #participantsList [multiple]="false">
+      <app-planning-participant-row *ngFor="let participant of participants" [participant]="participant"
+        [isFinishedVotingState]="isFinishedVotingState" [ticket]="ticket"></app-planning-participant-row>
+    </mat-selection-list>
+  </mat-card-actions>
+</mat-card>
