--- a/src/app/planning/participant/planning-participant-none-state-card/planning-participant-none-state-card.component.html
+++ b/src/app/planning/participant/planning-participant-none-state-card/planning-participant-none-state-card.component.html
@@ -8,7 +8,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button class="purple-button-command" (click)="onClickLeaveSession()">
-      End session
+      Leave session
     </button>
   </mat-card-actions>
 </mat-card>
