--- a/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
+++ b/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
@@ -5,7 +5,7 @@
   <mat-card-actions>
     <mat-selection-list #participantsList [multiple]="false">
       <app-planning-participant-row *ngFor="let participant of participants" [participant]="participant"
-        [isFinishedVotingState]="isFinishedVotingState" [ticket]="ticket"></app-planning-participant-row>
+        [isFinishedVotingState]="isFinishedVotingState" [isVotingState]="isVotingState" [ticket]="ticket"></app-planning-participant-row>
     </mat-selection-list>
   </mat-card-actions>
 </mat-card>
