--- a/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
+++ b/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
@@ -15,11 +15,15 @@
 <app-planning-session-ended-card [sessionName]="sessionName" *ngIf="isSessionEndedState">
 </app-planning-session-ended-card>
 
+<app-planning-participant-left-session-card [sessionName]="sessionName" *ngIf="isParticipantLeftState"></app-planning-participant-left-session-card>
+
 <app-planning-participant-removed-state-card [sessionName]="sessionName" *ngIf="isParticipantRemovedState">
 </app-planning-participant-removed-state-card>
 
-<app-planning-participant-invalid-session-state-card *ngIf="isInvalidSessionState"></app-planning-participant-invalid-session-state-card>
+<app-planning-participant-invalid-session-state-card *ngIf="isInvalidSessionState">
+</app-planning-participant-invalid-session-state-card>
 
 <app-planning-participant-participants-card [participants]="participants" [ticket]="ticket"
-  [isFinishedVotingState]="isFinishedVotingState" *ngIf="isNoneState || isFinishedVotingState">
+  [isFinishedVotingState]="isFinishedVotingState" [isVotingState]="isVotingState"
+  *ngIf="isNoneState || isVotingState || isFinishedVotingState">
 </app-planning-participant-participants-card>
