Go to error state if socket failure occurs

--- a/src/app/planning/shared/planning-error-state-card/planning-error-state-card.component.html
+++ b/src/app/planning/shared/planning-error-state-card/planning-error-state-card.component.html
@@ -4,8 +4,8 @@
     <mat-card-subtitle>Something has gone horribly wrong. Please start a new session or join again.</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button class="purple-button" routerLink="/planning/host">
-      Go back to host landing
+    <button mat-raised-button class="purple-button" routerLink="/" style="margin: 0px 8px !important;">
+      Go back to landing
     </button>
   </mat-card-actions>
 </mat-card>
