--- a/src/app/planning/host/planning-host-setup/planning-host-setup.component.html
+++ b/src/app/planning/host/planning-host-setup/planning-host-setup.component.html
@@ -7,7 +7,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Session name</mat-label>
         <input matInput [(ngModel)]="sessionName" name="sessionName" placeholder="Enter the name of the session"
-          required minlength="2" />
+          required minlength="2" autocomplete="off" />
       </mat-form-field>
 
       <h3>Available Cards</h3>
