--- a/src/app/planning/participant/planning-participant-setup/planning-participant-setup.component.html
+++ b/src/app/planning/participant/planning-participant-setup/planning-participant-setup.component.html
@@ -7,12 +7,12 @@
       <mat-form-field appearance="fill">
         <mat-label>Session code</mat-label>
         <input matInput [(ngModel)]="sessionCode" name="sessionCode" placeholder="Enter the code of the session"
-          required minlength="6" maxlength="6" />
+          required minlength="6" maxlength="6" autocomplete="off" />
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Your name</mat-label>
-        <input matInput [(ngModel)]="userName" name="userName" placeholder="Enter your name" required minlength="1" />
+        <input matInput [(ngModel)]="userName" name="userName" placeholder="Enter your name" required minlength="1" autocomplete="off" />
       </mat-form-field>
     </form>
   </mat-card-content>
