Implement reconnect for participant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar>
-  <span>Mamba</span>
+  <img href="/assets/App Icon.png" routerLink="/" style="border: 5px;">
+  <h1>Mamba</h1>
+  <a mat-button routerLink="/"> Home </a>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
