--- a/src/app/planning/participant/planning-participant-invalid-session-state-card/planning-participant-invalid-session-state-card.component.html
+++ b/src/app/planning/participant/planning-participant-invalid-session-state-card/planning-participant-invalid-session-state-card.component.html
@@ -4,7 +4,7 @@
     <mat-card-subtitle>The provided session code is not valid.</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button class="purple-button" routerLink="/">
+    <button mat-raised-button class="purple-button" routerLink="/planning/participant">
       Go back to landing
     </button>
   </mat-card-actions>
