--- a/src/app/planning/participant/planning-participant-left-session-card/planning-participant-left-session-card.component.html
+++ b/src/app/planning/participant/planning-participant-left-session-card/planning-participant-left-session-card.component.html
@@ -4,8 +4,8 @@
     <mat-card-subtitle>You have left the session.</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button class="purple-button" routerLink="/planning/host">
-      Go back to host landing
+    <button mat-raised-button class="purple-button" routerLink="/">
+      Go back to landing
     </button>
   </mat-card-actions>
 </mat-card>
