--- a/src/app/planning/host/planning-host-setup/planning-host-setup.component.html
+++ b/src/app/planning/host/planning-host-setup/planning-host-setup.component.html
@@ -1,29 +1,72 @@
 <mat-card class="product-card">
   <mat-card-content>
     <mat-card-title>Host a Sprint Planning Poker Session</mat-card-title>
-    <mat-card-subtitle>Provide the details necessary start a new session</mat-card-subtitle>
+    <mat-card-subtitle
+      >Provide the details necessary start a new session</mat-card-subtitle
+    >
 
     <form #sessionForm="ngForm">
       <mat-form-field appearance="fill">
         <mat-label>Session name</mat-label>
-        <input matInput [(ngModel)]="sessionName" name="sessionName" placeholder="Enter the name of the session"
-          required minlength="2" autocomplete="off" />
+        <input
+          matInput
+          [(ngModel)]="sessionName"
+          name="sessionName"
+          placeholder="Enter the name of the session"
+          required
+          minlength="2"
+          autocomplete="off"
+        />
       </mat-form-field>
 
-      <h3>Available Cards</h3>
-      <mat-selection-list #selectAvailableCardsList [(ngModel)]="selectedAvailableCards"
-        (ngModelChange)="onNgModelChange($event)" name="selectAvailableCardsList" minlength="1">
-        <mat-list-option *ngFor="let availableCard of availableCards" [value]="availableCard">
-          {{ planningCardMapper.cardName(availableCard) }}
-        </mat-list-option>
-      </mat-selection-list>
+      <mat-expansion-panel
+        (opened)="(panelOpenState)"
+        (closed)="(!panelOpenState)"
+        class="secondary-grey-background"
+      >
+        <mat-expansion-panel-header>
+          <mat-panel-title>Available Cards</mat-panel-title>
+          <mat-panel-description>
+            Selected card count: {{ selectedAvailableCards.length }}
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-grid-list cols="6" rowHeight="285:445">
+          <mat-grid-tile *ngFor="let availableCard of availableCards">
+            <img
+              [src]="planningCardImagePath(availableCard)"
+              (click)="onClickPlanningCard(availableCard)"
+              class="tile-image"
+            />
+            <div class="overlay tertiary-color">
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Empty checkmark icon"
+                *ngIf="!isSelected(availableCard)"
+                >circle</mat-icon
+              >
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Checkmark icon"
+                *ngIf="isSelected(availableCard)"
+                >check_circle</mat-icon
+              >
+            </div>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </mat-expansion-panel>
     </form>
   </mat-card-content>
   <mat-card-actions>
     <mat-list role="navigation">
-      <mat-list-item><button mat-raised-button [disabled]="
+      <mat-list-item
+        ><button
+          mat-raised-button
+          [disabled]="
             !sessionForm.form.valid || selectedAvailableCards.length == 0
-          " class="purple-button" (click)="onClickStartSession()">
+          "
+          class="purple-button"
+          (click)="onClickStartSession()"
+        >
           Start session
         </button>
       </mat-list-item>
