Fix app icon not displaying

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar>
-  <img href="/assets/App Icon.png" routerLink="/" style="border: 5px;">
-  <h1>Mamba</h1>
-  <a mat-button routerLink="/"> Home </a>
+  <img src="../assets/App Icon.png" style="border-radius: 10px; height: 50px; width: 50px;">
+  <button mat-button routerLink="/"><h1> Mamba</h1></button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
