--- a/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
+++ b/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
@@ -1,4 +1,4 @@
-<mat-list-option [value]="participant!.participantId">
+<mat-list-option [value]="participant!.participantId" [ngClass]="{ 'highlighted-participant-row': participant!.highlighted }">
   <mat-icon mat-list-icon>account_circle</mat-icon>
   <p class="left-align" style="flex-grow: inherit;">
     {{participant?.name}}
