--- a/src/app/planning/participant/planning-participant-none-state-card/planning-participant-none-state-card.component.html
+++ b/src/app/planning/participant/planning-participant-none-state-card/planning-participant-none-state-card.component.html
@@ -5,6 +5,8 @@
 
     <h2>Session code</h2>
     <mat-card-subtitle>{{sessionCode}}</mat-card-subtitle>
+
+    <button mat-raised-button [cdkCopyToClipboard]="sessionURL">Share session URL</button>
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button class="purple-button-command" (click)="onClickLeaveSession()">
