--- a/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
+++ b/src/app/planning/participant/planning-participant-participants-card/planning-participant-participants-card.component.html
@@ -4,8 +4,13 @@
   </mat-card-content>
   <mat-card-actions>
     <mat-selection-list #participantsList [multiple]="false">
-      <app-planning-participant-row *ngFor="let participant of participants" [participant]="participant"
-        [isFinishedVotingState]="isFinishedVotingState" [isVotingState]="isVotingState" [ticket]="ticket"></app-planning-participant-row>
+      <app-planning-participant-row
+        *ngFor="let participant of participants"
+        [participant]="participant"
+        [isFinishedVotingState]="isFinishedVotingState"
+        [isVotingState]="isVotingState"
+        [ticket]="ticket"
+      ></app-planning-participant-row>
     </mat-selection-list>
   </mat-card-actions>
 </mat-card>
