--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .product-card {
     max-width: 1000px;
-    margin: 20px;
+    margin: 20px auto;
     background-color: #E5E5EA;
     -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
